...
import dev.whysoezzy.uikit.error.asUserMessage
import dev.whysoezzy.uikit.models.UIKitAddress
import dev.whysoezzy.uikit.tokens.ColorTokens
import dev.whysoezzy.uikit.tokens.SpacingTokens
import org.koin.androidx.compose.koinViewModel

internal const val COMMUNITY_DETAILS_TOP_BAR_TAG = "community-details-top-bar"
internal const val COMMUNITY_DETAILS_VIEWPORT_TAG = "community-details-viewport"
internal const val COMMUNITY_DETAILS_HEADER_TAG = "community-details-header"
internal const val COMMUNITY_DETAILS_TERMINAL_TAG = "community-details-terminal"

@Composable
fun CommunityDetailsScreen(
    modifier: Modifier = Modifier,
...
