<resources>
    <string name="app_name">Meet</string>

    <!-- Общие -->
    <string name="loading">Загрузка...</string>
    <string name="retry">Повторить</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
</resources>